--- a/projectPages/gray/gray.html
+++ b/projectPages/gray/gray.html
@@ -76,6 +76,60 @@
 
   </div>
 
+  <div class="helpBox">
+    <div class="horizontal" style="top: 200px;"></div>
+    <div class="horizontal" style="top: 230px;"></div>
+    <div class="horizontal" style="top: 260px;"></div>
+    <div class="horizontal" style="top: 290px;"></div>
+    <div class="horizontal" style="top: 320px;"></div>
+    <div class="horizontal" style="top: 350px;"></div>
+    <div class="horizontal" style="top: 380px;"></div>
+    <div class="horizontal" style="top: 410px;"></div>
+    <div class="horizontal" style="top: 440px;"></div>
+    <div class="horizontal" style="top: 470px;"></div>
+    <div class="horizontal" style="top: 500px;"></div>
+    <div class="horizontal" style="top: 530px;"></div>
+    <div class="horizontal" style="top: 560px;"></div>
+    <div class="horizontal" style="top: 590px;"></div>
+    <div class="horizontal" style="top: 620px;"></div>
+    <div class="horizontal" style="top: 650px;"></div>
+    <div class="horizontal" style="top: 680px;"></div>
+    <div class="horizontal" style="top: 710px;"></div>
+    <div class="horizontal" style="top: 740px;"></div>
+    <div class="horizontal" style="top: 770px;"></div>
+    <div class="horizontal" style="top: 800px;"></div>
+
+
+    <div class="vertical" style="left: 120px;"></div>
+    <div class="vertical" style="left: 150px;"></div>
+    <div class="vertical" style="left: 180px;"></div>
+    <div class="vertical" style="left: 210px;"></div>
+    <div class="vertical" style="left: 240px;"></div>
+    <div class="vertical" style="left: 270px;"></div>
+    <div class="vertical" style="left: 300px;"></div>
+    <div class="vertical" style="left: 330px;"></div>
+    <div class="vertical" style="left: 360px;"></div>
+    <div class="vertical" style="left: 390px;"></div>
+    <div class="vertical" style="left: 420px;"></div>
+    <div class="vertical" style="left: 450px;"></div>
+    <div class="vertical" style="left: 480px;"></div>
+    <div class="vertical" style="left: 510px;"></div>
+    <div class="vertical" style="left: 540px;"></div>
+    <div class="vertical" style="left: 570px;"></div>
+    <div class="vertical" style="left: 600px;"></div>
+    <div class="vertical" style="left: 630px;"></div>
+    <div class="vertical" style="left: 660px;"></div>
+    <div class="vertical" style="left: 690px;"></div>
+    <div class="vertical" style="left: 720px;"></div>
+    <div class="vertical" style="left: 750px;"></div>
+    <div class="vertical" style="left: 780px;"></div>
+    <div class="vertical" style="left: 810px;"></div>
+    <div class="vertical" style="left: 840px;"></div>
+    <div class="vertical" style="left: 870px;"></div>
+    <div class="vertical" style="left: 900px;"></div>
+
+  </div>
+
 
   <script src="../../js/mainScript.js"></script>
   <script src="grayScript.js"></script>
@@ -89,5 +143,5 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script?
 
-  </body>
-  </html>
+</body>
+</html>
