--- a/projects/gray/gray.html
+++ b/projects/gray/gray.html
@@ -26,12 +26,9 @@
   <link rel="stylesheet" type="text/css" href="../../css/pageStyle.css">
   <link rel="stylesheet" type="text/css" href="grayStyle.css">
 
-
-
 </head>
 
 <body>
-
 
   <div class="container">
 
@@ -72,6 +69,58 @@
 
 
     </div>
+
+    <div class="line"></div>
+
+    <div class="headingSection color-white">
+      Overview
+    </div>
+
+    <div class="textContent">
+      I live in a bubble of 0 and 1s, yet I believe that the world around me is not binary.
+      There is no absolute right or wrong, no absolute gender, no absolute religion,
+      no absolute race, no absolute sexuality, no absolute black or white - but gray. </br>
+      This is my latest project - Gray, an ode to the struggles of unique
+      individuals in our perceived binary world. 
+    </div>
+
+    <div class="line"></div>
+
+    <div class="headingSection color-white">
+      Examples
+    </div>
+
+    <video class="contentVideo" controls muted>
+      <source src="../../images/gray/starryNight.mp4" type="video/mp4">
+    </video>
+
+    <video class="contentVideo" controls muted>
+      <source src="../../images/gray/mario.mp4" type="video/mp4">
+    </video>
+
+
+    <div class="line"></div>
+
+    <div class="headingSection color-white">
+      Implementation
+    </div>
+
+    <div class="textContent">
+      This is a fairly simple implementation using SVGs and D3. You can use vanilla JavaScript
+      and Canvas as well - it would not make a difference. The interesting part about this project
+      is that I had to implement the physics myself for the balls. Writing code for Elastic Collisions
+      in 2-Dimensions was extremly fun - I had to revise some high school physics and math.
+    </div>
+
+    <div class="line"></div>
+
+    <div class="contactSection color-white">
+      If you would like to know more about this project,
+      reach out to me at <a href="mailto:varnit@gatech.edu"> [varnit@gatech.edu] </a> or
+      <a href="https://www.linkedin.com/in/varnitjain/" target="_blank"> [LinkedIn] </a> .
+    </div>
+
+    <div class="line"></div>
 
 
   </div>
@@ -129,6 +178,16 @@
     <div class="vertical" style="left: 900px;"></div>
 
   </div>
+
+  <style>
+    a,
+    a:hover,
+    a:active,
+    a:visited {
+      color: var(--color-white);
+      text-decoration: none;
+    }
+  </style>
 
 
   <script src="../../js/mainScript.js"></script>
