--- a/projects/gray/gray.html
+++ b/projects/gray/gray.html
@@ -106,9 +106,10 @@
     </div>
 
     <div class="textContent">
-      This is a fairly simple implementation using SVGs and D3. You can use vanilla JavaScript
-      and Canvas as well - it would not make a difference. The interesting part about this project
-      is that I had to implement the physics myself for the balls. Writing code for Elastic Collisions
+      This is a fairly simple implementation using SVGs, D3 and JavaScript.
+      You can use a Canvas as well - it will not make a
+      difference. The interesting part about this project
+      is that I had to implement the physics myself for the movement and collisions. Writing code for Elastic Collisions
       in 2-Dimensions was extremly fun - I had to revise some high school physics and math.
     </div>
 
